Fix modal screen overflow on mobile devices

--- a/app/javascript/src/tailwind/components/modal.css
+++ b/app/javascript/src/tailwind/components/modal.css
@@ -1,13 +1,14 @@
 .modal-overlay { @apply fixed pin-x pin-y bg-black opacity-25 z-30; }
 
 .modal {
-  @apply hidden max-w-md bg-white rounded shadow-lg px-6 py-4 relative z-50 m-auto fixed;
+  @apply hidden bg-white rounded shadow-lg px-6 py-4 relative z-50 m-auto fixed;
   top: 25%;
   left: 0;
   right: 0;
   height: fit-content;
   width: fit-content;
-  min-width: 30rem;
+  min-width: 300px;
+  max-width: calc(100vw - 10%);
 
   .title { @apply font-bold text-xl; }
   .modal-content { @apply text-base py-4; }
